gccida/g2/qty_sugg_compare
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2226:56: error: use of undeclared identifier 'qty_0'
LODWORD( v5) = ( int)( ( double)( *( int *)( ( char *)&qty_0->size + v5) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2227:24: error: use of undeclared identifier 'qty_0'
* *( int *)( ( char *)&qty_0->freq + v5) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2228:41: error: use of undeclared identifier 'qty_0'
* floor_log2_wide( *( int *)( ( char *)&qty_0->n_refs + v5))) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2229:35: error: use of undeclared identifier 'qty_0'
/ ( double)( *( int *)( ( char *)&qty_0->death + v5) - *( int *)( ( char *)&qty_0->birth + v5)) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2229:77: error: use of undeclared identifier 'qty_0'
/ ( double)( *( int *)( ( char *)&qty_0->death + v5) - *( int *)( ( char *)&qty_0->birth + v5)) 
                                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2232:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v6].size * qty_0[v6].freq * floor_log2_wide( qty_0[v6].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2232:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v6].size * qty_0[v6].freq * floor_log2_wide( qty_0[v6].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2232:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v6].size * qty_0[v6].freq * floor_log2_wide( qty_0[v6].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2233:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v6].death - qty_0[v6].birth) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/local-alloc.c:2233:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v6].death - qty_0[v6].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_sugg_compare/src/obj/local-alloc.o] Error 1
